--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@ Białkowski  3R </font> </p> <br>
  
 function WinOpen_z3() 
  { 
-window.open("zadanie3_zam.html","okienko_z3","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
+window.open("z3_zam.html","okienko_z3","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
  } 
 
 
 function WinOpen_z4() 
  { 
-window.open("zadanie4_zam.html","okienko_z4","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400"); 
+window.open("z4_zam.html","okienko_z4","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400"); 
  } 
 
 
 function WinOpen_z5() 
  { 
-window.open("zadanie5_zam.html","okienko_z5","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400"); 
+window.open("z5_zam.html","okienko_z5","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400"); 
  } 
 
 
@@ -97,4 +97,5 @@ function okno_zamknij()
 <input type="button" value="zamknij okno" onclick="okno_zamknij()"/> 
  </form> 
 </body> 
+
 </html>
