--- a/z4_zam.html
+++ b/z4_zam.html
@@ -47,16 +47,17 @@ Zaleta3 …………………………..Pozwala na tworzenie dynamicznych stron 
 &lsaquo;input type="button" name="przycisk" value="Nowa Strona" onclick="WinOpen(' ')"&rsaquo;
 <br><br>
 11)Przepisz linie kody pod nimi wytłumaczenie jak działa ta ten fragment kodu<br>
-window.open("obraz.html","okienko","toolbar=no,directories=no,menubar=no,height=280,width=160,top=200,left=200");
+window.open("obraz.html","okienko","toolbar=no,directories=no,menubar=no,height=280,width=160,top=200,left=200");<br>
 ……………………………Ta linia kodu otwiera nowe okno przeglądarki z plikiem obraz.html.
-Nazwa tego okna to okienko.
-Parametry określają wygląd i pozycję okna: brak paska narzędzi (toolbar=no), brak katalogów (directories=no), brak menu (menubar=no), wysokość 280px, szerokość 160px,
+Nazwa tego okna to okienko.<br>
+Parametry określają wygląd i pozycję okna: brak paska narzędzi (toolbar=no), brak katalogów (directories=no), brak menu (menubar=no), wysokość 280px, szerokość 160px,<br>
  pozycja okna 200px od góry (top=200) i 200px od lewej krawędzi ekranu (left=200).……………………………
 <br><br>
 12)Opisz następującą instrukcję window.close()<br>
-……………………………Ta instrukcja zamyka aktualne okno przeglądarki lub okno, które zostało wcześniej otwarte za pomocą funkcji window.open().
+……………………………Ta instrukcja zamyka aktualne okno przeglądarki lub okno, które zostało wcześniej otwarte za pomocą funkcji window.open().<br>
 Nie może jednak zamknąć głównego okna przeglądarki, którego użytkownik sam nie otworzył — działa tylko na okna otwarte przez skrypt JavaScript.……………………………
 </body> 
 </html>
 <br><br><br><br>
+
 <input type="button" value="zamknij okno" onclick="okno_zamknij_zamojski()"/>
