--- a/z4_zam.html
+++ b/z4_zam.html
@@ -48,7 +48,7 @@ Zaleta3 …………………………..Pozwala na tworzenie dynamicznych stron 
 <br><br>
 11)Przepisz linie kody pod nimi wytłumaczenie jak działa ta ten fragment kodu<br>
 window.open("obraz.html","okienko","toolbar=no,directories=no,menubar=no,height=280,width=160,top=200,left=200");<br>
-……………………………Ta linia kodu otwiera nowe okno przeglądarki z plikiem obraz.html.
+……………………………Ta linia kodu otwiera nowe okno przeglądarki z plikiem obraz.html.<br>
 Nazwa tego okna to okienko.<br>
 Parametry określają wygląd i pozycję okna: brak paska narzędzi (toolbar=no), brak katalogów (directories=no), brak menu (menubar=no), wysokość 280px, szerokość 160px,<br>
  pozycja okna 200px od góry (top=200) i 200px od lewej krawędzi ekranu (left=200).……………………………
@@ -61,3 +61,4 @@ Nie może jednak zamknąć głównego okna przeglądarki, którego użytkownik s
 <br><br><br><br>
 
 <input type="button" value="zamknij okno" onclick="okno_zamknij_zamojski()"/>
+
