--- a/index.html
+++ b/index.html
@@ -32,37 +32,37 @@ window.open("zadanie6_zam.html","okienko_z6","toolbar=no,directories=no,menubar=
 
  function WinOpen_z7() 
  { 
-window.open("zadanie7_zam.html","okienko_z7","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
+window.open("z7_zam.html","okienko_z7","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
  } 
 
 
 function WinOpen_z8() 
  { 
-window.open("zadanie8_zam.html","okienko_z8","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400"); 
+window.open("z8_zam.html","okienko_z8","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400"); 
  } 
 
 
 function WinOpen_z9() 
  { 
-window.open("zadanie9_zam.html","okienko_z9","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400"); 
+window.open("z9_zam.html","okienko_z9","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400"); 
  } 
 
 
 function WinOpen_z10() 
  { 
-window.open("zadanie10_zam.html","okienko_z10","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400"); 
+window.open("z10_zam.html","okienko_z10","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400"); 
  } 
 
 
 function WinOpen_z11() 
  { 
-window.open("zadanie11_zam.html","okienko_z11","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400"); 
+window.open("z11_zam.html","okienko_z11","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400"); 
  } 
 
 
 function WinOpen_z11_kod() 
  { 
-window.open("zadanie11_zam_kod.html","okienko_z11_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400"); 
+window.open("z11_zam_kod.html","okienko_z11_kod","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400"); 
  } 
  
  
@@ -99,6 +99,7 @@ function okno_zamknij()
 </body> 
 
 </html>
+
 
 
 
