--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
  <html> 
 <head> 
 <title>Tomasz Białkowski</title> 
-<p align="left"> <font color="red" size="7" face="Arial"> Szkielet zaliczeniowy JavaScript Tomasz 
-Białkowski  3R </font> </p> <br>  
+<p align="left"> <font color="red" size="7" face="Arial"> Szkielet zaliczeniowy JavaScript Michał Zamojski  3F </font> </p> <br>  
  <script language="JavaScript"> 
 
  
@@ -99,6 +98,7 @@ function okno_zamknij()
 </body> 
 
 </html>
+
 
 
 
