--- a/index.html
+++ b/index.html
@@ -63,7 +63,11 @@ function WinOpen_z11_kod()
  { 
 window.open("z11_zam_kod.html","okienko_z11_kod","toolbar=no,directories=no,menubar=no,height=380,width=750,top=200,left=400"); 
  } 
- 
+
+function WinOpen_z13() 
+ { 
+window.open("z13_zam.html","okienko_z13","toolbar=no,directories=no,menubar=no,height=380,width=750,top=200,left=400"); 
+ }
  
 function okno_zamknij() 
  { 
@@ -73,31 +77,48 @@ function okno_zamknij()
  </head> 
 <body> 
  <form> 
- <input type="button" name="z3" value="zadanie3_zamojski" onclick="WinOpen_z3(' ')"> <br><br> 
+
+<input type="button" name="z3" value="zadanie3_zamojski" onclick="WinOpen_z3(' ')"> <br><br> 
+
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
  <input type="button" name="z4" value="zadanie4_zamojski" onclick="WinOpen_z4(' ')"> <br><br> 
+
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
  <input type="button" name="z5" value="zadanie5_zamojski" onclick="WinOpen_z5(' ')"> <br><br> 
+
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
  <input type="button" name="z6" value="zadanie6_zamojski" onclick="WinOpen_z6(' ')"> <br><br> 
+
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
  <input type="button" name="z7" value="zadanie7_zamojski" onclick="WinOpen_z7(' ')"> <br><br> 
+
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
  <input type="button" name="z8" value="zadanie8_zamojski" onclick="WinOpen_z8(' ')"> <br><br> 
+
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
  <input type="button" name="z9" value="zadanie9_zamojski" onclick="WinOpen_z9(' ')"> <br><br> 
+
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
  <input type="button" name="z10" value="zadanie10_zamojski" onclick="WinOpen_z10(' ')"> <br><br> 
+
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
- <input type="button" name="z11" value="zadanie11_zamojski" onclick="WinOpen_z11(' ')"> 
- <input type="button" name="z11" value="zadanie11_zamojski_kod" onclick="WinOpen_z11_kod(' ')"> 
+ <input type="button" name="z11" value="zadanie11_zamojski" onclick="WinOpen_z11(' ')"> <br><br> 
+ <input type="button" name="z11" value="zadanie11_zamojski_kod" onclick="WinOpen_z11_kod(' ')"> <br><br> 
+
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
-<br><br> 
+ <input type="button" name="z13" value="zadanie13_zamojski" onclick="WinOpen_z13(' ')"> <br><br> 
+ <input type="button" name="z13" value="zadanie13_zamojski_kod" onclick="WinOpen_z13_kod(' ')"> <br><br> 
+
+
+  
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
+<br><br>   
 <input type="button" value="zamknij okno" onclick="okno_zamknij()"/> 
  </form> 
 </body> 
 
 </html>
+
 
 
 
