--- a/index.html
+++ b/index.html
@@ -68,7 +68,12 @@ function WinOpen_z13()
  { 
 window.open("z13_zam.html","okienko_z13","toolbar=no,directories=no,menubar=no,height=380,width=750,top=200,left=400"); 
  }
- 
+
+function WinOpen_z13_kod() 
+ { 
+window.open("z13_zam_kod.html","okienko_z13","toolbar=no,directories=no,menubar=no,height=380,width=750,top=200,left=400"); 
+ }
+  
 function okno_zamknij() 
  { 
  window.close() 
@@ -107,7 +112,7 @@ function okno_zamknij()
 
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
  <input type="button" name="z13" value="zadanie13_zamojski" onclick="WinOpen_z13(' ')"> <br><br> 
- <input type="button" name="z13" value="zadanie13_zamojski_kod" onclick="WinOpen_z13_kod(' ')"> <br><br> 
+ <input type="button" name="z13_kod" value="zadanie13_zamojski_kod" onclick="WinOpen_z13_kod(' ')"> <br><br> 
 
 
   
@@ -118,6 +123,7 @@ function okno_zamknij()
 </body> 
 
 </html>
+
 
 
 
