--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
  <html> 
 <head> 
-<title>Tomasz Białkowski</title> 
+<title>Michał Zamojski</title> 
 <p align="left"> <font color="red" size="7" face="Arial"> Szkielet zaliczeniowy JavaScript Michał Zamojski  3F </font> </p> <br>  
  <script language="JavaScript"> 
 
@@ -123,6 +123,7 @@ function okno_zamknij()
 </body> 
 
 </html>
+
 
 
 
