--- a/index.html
+++ b/index.html
@@ -73,6 +73,17 @@ function WinOpen_z13_kod()
  { 
 window.open("z13_zam_kod.html","okienko_z13","toolbar=no,directories=no,menubar=no,height=400,width=750,top=200,left=400"); 
  }
+
+function WinOpen_z14() 
+ { 
+window.open("z14_zam.html","okienko_z14","toolbar=no,directories=no,menubar=no,height=380,width=750,top=200,left=400"); 
+ }
+
+function WinOpen_z14_kod() 
+ { 
+window.open("z14_zam_kod.html","okienko_z14","toolbar=no,directories=no,menubar=no,height=400,width=750,top=200,left=400"); 
+ }
+
   
 function okno_zamknij() 
  { 
@@ -114,6 +125,13 @@ function okno_zamknij()
  <input type="button" name="z13" value="zadanie13_zamojski" onclick="WinOpen_z13(' ')"> <br><br> 
  <input type="button" name="z13_kod" value="zadanie13_zamojski_kod" onclick="WinOpen_z13_kod(' ')"> <br><br> 
 
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
+ <input type="button" name="z13" value="zadanie13_zamojski" onclick="WinOpen_z13(' ')"> <br><br> 
+ <input type="button" name="z13_kod" value="zadanie13_zamojski_kod" onclick="WinOpen_z13_kod(' ')"> <br><br> 
+
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
+ <input type="button" name="z14" value="zadanie14_zamojski" onclick="WinOpen_z14(' ')"> <br><br> 
+ <input type="button" name="z14_kod" value="zadanie14_zamojski_kod" onclick="WinOpen_z14_kod(' ')"> <br><br> 
 
   
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
@@ -123,6 +141,7 @@ function okno_zamknij()
 </body> 
 
 </html>
+
 
 
 
