--- a/index.html
+++ b/index.html
@@ -84,6 +84,16 @@ function WinOpen_z14_kod()
 window.open("z14_zam_kod.html","okienko_z14","toolbar=no,directories=no,menubar=no,height=400,width=750,top=200,left=400"); 
  }
 
+function WinOpen_z15() 
+ { 
+window.open("z15_zam.html","okienko_z15","toolbar=no,directories=no,menubar=no,height=380,width=750,top=200,left=400"); 
+ }
+
+function WinOpen_z15_kod() 
+ { 
+window.open("z15_zam_kod.html","okienko_z15","toolbar=no,directories=no,menubar=no,height=400,width=750,top=200,left=400"); 
+ }
+  
   
 function okno_zamknij() 
  { 
@@ -129,6 +139,10 @@ function okno_zamknij()
  <input type="button" name="z14" value="zadanie14_zamojski" onclick="WinOpen_z14(' ')"> <br><br> 
  <input type="button" name="z14_kod" value="zadanie14_zamojski_kod" onclick="WinOpen_z14_kod(' ')"> <br><br> 
 
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
+ <input type="button" name="z15" value="zadanie15_zamojski" onclick="WinOpen_z15(' ')"> <br><br> 
+ <input type="button" name="z15_kod" value="zadanie15_zamojski_kod" onclick="WinOpen_z15_kod(' ')"> <br><br> 
+  
   
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
 <br><br>   
@@ -137,6 +151,7 @@ function okno_zamknij()
 </body> 
 
 </html>
+
 
 
 
