--- a/index.html
+++ b/index.html
@@ -93,6 +93,16 @@ function WinOpen_z15_kod()
  { 
 window.open("z15_zam_kod.html","okienko_z15","toolbar=no,directories=no,menubar=no,height=400,width=750,top=200,left=400"); 
  }
+
+function WinOpen_z16() 
+ { 
+window.open("z16_zam.html","okienko_z16","toolbar=no,directories=no,menubar=no,height=380,width=750,top=200,left=400"); 
+ }
+
+function WinOpen_z16_kod() 
+ { 
+window.open("z16_zam_kod.html","okienko_z16","toolbar=no,directories=no,menubar=no,height=400,width=750,top=200,left=400"); 
+ }
   
   
 function okno_zamknij() 
@@ -142,7 +152,10 @@ function okno_zamknij()
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
  <input type="button" name="z15" value="zadanie15_zamojski" onclick="WinOpen_z15(' ')"> <br><br> 
  <input type="button" name="z15_kod" value="zadanie15_zamojski_kod" onclick="WinOpen_z15_kod(' ')"> <br><br> 
-  
+
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
+ <input type="button" name="z16" value="zadanie16_zamojski" onclick="WinOpen_z16(' ')"> <br><br> 
+ <input type="button" name="z16_kod" value="zadanie16_zamojski_kod" onclick="WinOpen_z16_kod(' ')"> <br><br>  
   
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
 <br><br>   
@@ -151,6 +164,7 @@ function okno_zamknij()
 </body> 
 
 </html>
+
 
 
 
