--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ window.open("z5_zam.html","okienko_z5","toolbar=no,directories=no,menubar=no,hei
 
 function WinOpen_z6() 
  { 
-window.open("zadanie6_zam.html","okienko_z6","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400"); 
+window.open("z6_zam.html","okienko_z6","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400"); 
  } 
 
 
@@ -123,7 +123,7 @@ function okno_zamknij()
  <input type="button" name="z5" value="zadanie5_zamojski" onclick="WinOpen_z5(' ')"> <br><br> 
 
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
- <input type="button" name="z6" value="zadanie6_zamojski" onclick="WinOpen_z6(' ')"> <br><br> 
+ <input type="button" name="z6" value="z6_zamojski" onclick="WinOpen_z6(' ')"> <br><br> 
 
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
  <input type="button" name="z7" value="zadanie7_zamojski" onclick="WinOpen_z7(' ')"> <br><br> 
@@ -164,6 +164,7 @@ function okno_zamknij()
 </body> 
 
 </html>
+
 
 
 
