--- a/z16_zam_kod.html
+++ b/z16_zam_kod.html
@@ -1,6 +1,6 @@
 <html> 
    <body> 
-     <textarea height=500 width=1000> 
+     <textarea cols="90" rows="24"> 
 <!DOCTYPE html>
 <body>
     <div style="color:darkblue;font-size:200%;">
@@ -31,6 +31,7 @@ document.write("("+a+""+""+b+")^3= "+a+"^3 +3*(("+a+")^2)*("+b+") +3*("+a+")*(("
     </body> 
 
 </html> 
+
 
 
 
