--- a/z15_zam_kod.html
+++ b/z15_zam_kod.html
@@ -14,8 +14,11 @@
             document.write("1/"+a_zam+" = 1/"+b_zam+" + 1/"+c_zam+"<br>");
             </script>
             </div>
+<!--Michał Zamojski 3F gr.2-->
+<!--21:16 11.10.2025-->
         </body>
         </html>
                               </textarea> 
     </body> 
+
 </html> 
