--- a/z11_zam_kod.html
+++ b/z11_zam_kod.html
@@ -21,8 +21,11 @@
               </script> 
             </div> 
           <input type="button" value="zamknij okno" onclick="okno_zamknij_zamojski()"/> 
+<!--Michał Zamojski 3F gr.2-->
+<!--21:16 11.10.2025-->
         </body> 
        </html> 
       </textarea> 
     </body> 
+
 </html> 
