--- a/index.html
+++ b/index.html
@@ -103,6 +103,79 @@ function WinOpen_z16_kod()
  { 
 window.open("z16_zam_kod.html","okienko_z16","toolbar=no,directories=no,menubar=no,height=500,width=1200,top=200,left=400"); 
  }
+
+function WinOpen_z18() 
+ { 
+window.open("z18_zam.html","okienko_z18","toolbar=no,directories=no,menubar=no,height=500,width=1200,top=200,left=400"); 
+ }
+  
+function WinOpen_z18_kod() 
+ { 
+window.open("z18_kod_zam.html","okienko_z18","toolbar=no,directories=no,menubar=no,height=500,width=1200,top=200,left=400"); 
+ }
+
+function WinOpen_z19() 
+ { 
+window.open("z19_zam.html","okienko_z19","toolbar=no,directories=no,menubar=no,height=500,width=1200,top=200,left=400"); 
+ }
+
+function WinOpen_z19_kod() 
+ { 
+window.open("z19_kod_zam.html","okienko_z19","toolbar=no,directories=no,menubar=no,height=500,width=1200,top=200,left=400"); 
+ }
+function WinOpen_z20() 
+ { 
+window.open("z20_zam.html","okienko_z20","toolbar=no,directories=no,menubar=no,height=500,width=1200,top=200,left=400"); 
+ }
+
+function WinOpen_z20_kod() 
+ { 
+window.open("z20_kod_zam.html","okienko_z20","toolbar=no,directories=no,menubar=no,height=500,width=1200,top=200,left=400"); 
+ }
+
+function WinOpen_z21() 
+ { 
+window.open("z21_zam.html","okienko_z20","toolbar=no,directories=no,menubar=no,height=500,width=1200,top=200,left=400"); 
+ }
+function WinOpen_z21_kod() 
+ { 
+window.open("z21_kod_zam.html","okienko_z20","toolbar=no,directories=no,menubar=no,height=500,width=1200,top=200,left=400"); 
+ }
+function WinOpen_z22() 
+ { 
+window.open("z22_zam.html","okienko_z22","toolbar=no,directories=no,menubar=no,height=500,width=1200,top=200,left=400"); 
+ }
+function WinOpen_z22_kod() 
+ { 
+window.open("z22_kod_zam.html","okienko_z22","toolbar=no,directories=no,menubar=no,height=500,width=1200,top=200,left=400"); 
+ }
+
+function WinOpen_z23() 
+ { 
+window.open("z23_zam.html","okienko_z23","toolbar=no,directories=no,menubar=no,height=500,width=1200,top=200,left=400"); 
+ }
+function WinOpen_z23_kod() 
+ { 
+window.open("z23_kod_zam.html","okienko_z23","toolbar=no,directories=no,menubar=no,height=500,width=1200,top=200,left=400"); 
+ }
+ function WinOpen_z24() 
+ { 
+window.open("z24_zam.html","okienko_z24","toolbar=no,directories=no,menubar=no,height=500,width=1200,top=200,left=400"); 
+ } 
+
+function WinOpen_z24_kod() 
+ { 
+window.open("z24_kod_zam.html","okienko_z24","toolbar=no,directories=no,menubar=no,height=500,width=1200,top=200,left=400"); 
+ }
+
+
+
+
+
+
+
+
+
   
   
 function okno_zamknij() 
@@ -156,6 +229,41 @@ function okno_zamknij()
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
  <input type="button" name="z16" value="zadanie16_zamojski" onclick="WinOpen_z16(' ')"> <br><br> 
  <input type="button" name="z16_kod" value="zadanie16_zamojski_kod" onclick="WinOpen_z16_kod(' ')"> <br><br>  
+
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
+ <input type="button" name="z18" value="zadanie18_zamojski" onclick="WinOpen_z18(' ')"> <br><br> 
+ <input type="button" name="z18_kod" value="zadanie18_zamojski_kod" onclick="WinOpen_z18_kod(' ')"> <br><br>  
+
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
+ <input type="button" name="z19" value="zadanie19_zamojski" onclick="WinOpen_z19(' ')"> <br><br> 
+ <input type="button" name="z19_kod" value="zadanie19_zamojski_kod" onclick="WinOpen_z19_kod(' ')"> <br><br>  
+
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
+ <input type="button" name="z20" value="zadanie20_zamojski" onclick="WinOpen_z20(' ')"> <br><br> 
+ <input type="button" name="z20_kod" value="zadanie20_zamojski_kod" onclick="WinOpen_z20_kod(' ')"> <br><br>  
+
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
+ <input type="button" name="z21" value="zadanie21_zamojski" onclick="WinOpen_z21(' ')"> <br><br> 
+ <input type="button" name="z21_kod" value="zadanie21_zamojski_kod" onclick="WinOpen_z21_kod(' ')"> <br><br>
+
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
+ <input type="button" name="z22" value="zadanie22_zamojski" onclick="WinOpen_z22(' ')"> <br><br> 
+ <input type="button" name="z22_kod" value="zadanie22_zamojski_kod" onclick="WinOpen_z22_kod(' ')"> <br><br>
+
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
+ <input type="button" name="z23" value="zadanie23_zamojski" onclick="WinOpen_z23(' ')"> <br><br> 
+ <input type="button" name="z23_kod" value="zadanie23_zamojski_kod" onclick="WinOpen_z23_kod(' ')"> <br><br>
+
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
+ <input type="button" name="z24" value="zadanie24_zamojski" onclick="WinOpen_z24(' ')"> <br><br> 
+ <input type="button" name="z24_kod" value="zadanie24_zamojski_kod" onclick="WinOpen_z24_kod(' ')"> <br><br>
+
+
+
+
+
+  
+
   
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
 <br><br>   
@@ -164,6 +272,7 @@ function okno_zamknij()
 </body> 
 
 </html>
+
 
 
 
